k8s/services/auth-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: portal-universe
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: laze8771/portal-universe-auth-service:latest
          command: ["java"]
          args: ["-jar", "app.jar"]
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
              name: http
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: portal-universe
  labels:
    app: auth-service
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: auth-service
